Included jquery.js and jstree.jquery.js in the code

--- a/basic_example/try_jstree.html
+++ b/basic_example/try_jstree.html
@@ -1,6 +1,15 @@
 <html>
     <head>
         <title>Use jsTree</title>
+        <script src="jquery.js">
+        </script>
+        <script src="jquery.jstree.js">
+        </script>
+        <script>
+            $(document).ready(function(){
+                
+            });
+        </script>
     </head>
     <body>
         <div id="treeViewDiv">
