--- a/basic_example/try_jstree.html
+++ b/basic_example/try_jstree.html
@@ -7,7 +7,12 @@
         </script>
         <script>
             $(document).ready(function(){
-                
+                $("#treeViewDiv").jstree({
+                    "json_data" : {
+                        
+                    },
+                    "plugins" : []
+                });
             });
         </script>
     </head>
