Displaying entire Treeview structure for our example

--- a/basic_example/try_jstree.html
+++ b/basic_example/try_jstree.html
@@ -11,10 +11,19 @@
                     "json_data" : {
                         "data":[
                             {
-                                "data" : "Search engines"
+                                "data" : "Search engines",
+                                "children" :[
+                                             {"data":"Yahoo"},
+                                             {"data":"Bing"},
+                                             {"data":"Google", "children":[{"data":"Youtube"},{"data":"Gmail"},{"data":"Orkut"}]}
+                                            ]
                             },
                             {
-                                "data" : "Networking sites"
+                                "data" : "Networking sites",
+                                "children" :[
+                                    {"data":"Facebook"},
+                                    {"data":"Twitter"}
+                                ]
                             }
                         ]
                     },
