metadata containing href added for objects

--- a/basic_example/try_jstree.html
+++ b/basic_example/try_jstree.html
@@ -13,16 +13,16 @@
                             {
                                 "data" : "Search engines",
                                 "children" :[
-                                             {"data":"Yahoo"},
-                                             {"data":"Bing"},
-                                             {"data":"Google", "children":[{"data":"Youtube"},{"data":"Gmail"},{"data":"Orkut"}]}
+                                             {"data":"Yahoo", "metadata":{"href":"http://www.yahoo.com"}},
+                                             {"data":"Bing", "metadata":{"href":"http://www.bing.com"}},
+                                             {"data":"Google", "children":[{"data":"Youtube", "metadata":{"href":"http://youtube.com"}},{"data":"Gmail", "metadata":{"href":"http://www.gmail.com"}},{"data":"Orkut","metadata":{"href":"http://www.orkut.com"}}], "metadata" : {"href":"http://youtube.com"}}
                                             ]
                             },
                             {
                                 "data" : "Networking sites",
                                 "children" :[
-                                    {"data":"Facebook"},
-                                    {"data":"Twitter"}
+                                    {"data":"Facebook", "metadata":{"href":"http://www.fb.com"}},
+                                    {"data":"Twitter", "metadata":{"href":"http://twitter.com"}}
                                 ]
                             }
                         ]
