Open/expand first root node on page load

--- a/basic_example/try_jstree.html
+++ b/basic_example/try_jstree.html
@@ -16,7 +16,8 @@
                                              {"data":"Yahoo", "metadata":{"href":"http://www.yahoo.com"}},
                                              {"data":"Bing", "metadata":{"href":"http://www.bing.com"}},
                                              {"data":"Google", "children":[{"data":"Youtube", "metadata":{"href":"http://youtube.com"}},{"data":"Gmail", "metadata":{"href":"http://www.gmail.com"}},{"data":"Orkut","metadata":{"href":"http://www.orkut.com"}}], "metadata" : {"href":"http://youtube.com"}}
-                                            ]
+                                            ],
+                                "state" : "open"
                             },
                             {
                                 "data" : "Networking sites",
